'commitIndexBuild' oplog entry is a no-op for unfinished index builds not restarted

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc8, 5.0.10, 4.4.16, 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v6.0, v5.0, v4.4
    • Execution Team 2022-05-02
    • 50
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Unfinished index builds are not restarted in standalone mode. When the server is started with --recoverFromOplogAsStandalone, a commitIndexBuild oplog entry during oplog recovery is a no-op for these unfinished indexes. This has the potential to hang oplog recovery when replaying oplog entries after the commitIndexBuild oplog entry, like renameCollection with dropTarget=true which checks that there are no index builds in progress.

            Assignee:
            Shin Yee Tan
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: