SERVER-65399 Restart index build if recover in standalone and 'commitIndexBuild' oplog entry replayed